Fixing spacing for cam foundation

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -73,6 +73,7 @@
 
 	.camlogo img {
 		width: 200px !important;
+		margin-top: 20px;
 	}
 
 	.donating {
